--- a/web.config
+++ b/web.config
@@ -10,6 +10,8 @@
                 <add name="Access-Control-Allow-Origin" value="*" />
             </customHeaders>
         </httpProtocol>
+        <customErrors mode="Off" />
+        <httpErrors errorMode="Detailed"></httpErrors>
     </system.webServer>
 </configuration>
 
