--- a/web.config
+++ b/web.config
@@ -1,17 +1,19 @@
-<?xml version="1.0"?>
 <configuration>
-    <system.webServer>
-        <staticContent>
-            <mimeMap fileExtension=".json" mimeType="application/json" />
-            <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
-        </staticContent>
-        <httpProtocol>
-            <customHeaders>
-                <add name="Access-Control-Allow-Origin" value="*" />
-            </customHeaders>
-        </httpProtocol>
-        
-    </system.webServer>
+  <system.webServer>
+    
+   
+    
+    <handlers>
+      <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
+    </handlers>
+    
+   
+    
+    <defaultDocument enabled="true">
+      <files>
+        <add value="index.js" />
+      </files>
+    </defaultDocument>
+    
+  </system.webServer>
 </configuration>
-
-
